retrieve_ENO_DEV1/objects/Outbound_Transfer_Insert_Event__e.object
<CustomObject>
    <fields>
        <fullName>Activated_In_This_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activated In This Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Fields__c</fullName>
        <label>Additional Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inserted_Time_in_Ms__c</fullName>
        <label>Inserted Time in Ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Time_in_Ms__c</fullName>
        <label>Last Updated Time in Ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Endpoint__c</fullName>
        <label>Request Endpoint</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Method__c</fullName>
        <label>Request Method</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Developer_Name__c</fullName>
        <label>SObject Developer Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trace_Id__c</fullName>
        <label>Trace-Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Outbound Transfer Insert Event</label>
    <pluralLabel>Outbound Transfer Insert Events</pluralLabel>
</CustomObject>